// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App.vue should display "Home" and "Parameters" links when the user is not authenticated 1`] = `
<div id="app">
  <loader-stub style="display: none;"></loader-stub>
  <nav class="flex items-center bg-white border-b border-grey-lighter justify-between flex-wrap fixed pin-t pin-x z-10 p-3 lg:p-4">
    <div class="flex items-center flex-no-shrink text-white mr-6"><img src="./assets/logo.png" alt="Client logo" class="h-8 w-8 mr-2">
      <routerlinkwrapper-stub to="/" label="Client" classes="font-semibold text-xl tracking-tight text-grey-darker"></routerlinkwrapper-stub>
    </div>
    <div class="flex block lg:hidden">
      <div id="menu-open"><button aria-label="Toggle navigation" class="flex items-center px-3 py-2 border rounded text-green border-green hover:text-green-lighter hover:border-green-light"><svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="fill-current h-3 w-3">
            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
          </svg></button></div>
    </div>
    <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto min-h-screen lg:min-h-full pt-6 lg:pt-0 hidden">
      <div class="text-sm lg:flex-grow text-left lg:text-center px-2">
        <routerlinkwrapper-stub to="/" label="home" classes="link"></routerlinkwrapper-stub>
        <separator-stub style="display: none;"></separator-stub>
        <!---->
      </div>
      <div class="text-sm text-left lg:text-center px-2 lg:px-0">
        <routerlinkwrapper-stub to="/parameters" label="parameters" classes="link"></routerlinkwrapper-stub>
        <googlesigninbutton-stub class="ml-2 lg:ml-0 mt-4 lg:mt-0"></googlesigninbutton-stub>
      </div>
    </div>
  </nav>
  <div class="min-h-screen pt-24 px-6 pb-6">
    <routerview-stub name="default"></routerview-stub>
  </div>
  <transitionslideup-stub duration="400">
    <notification-stub notification="[object Object]" style="display: none;"></notification-stub>
  </transitionslideup-stub>
</div>
`;

exports[`App.vue should display restricted links when the user is authenticated 1`] = `
<div id="app">
  <loader-stub style="display: none;"></loader-stub>
  <nav class="flex items-center bg-white border-b border-grey-lighter justify-between flex-wrap fixed pin-t pin-x z-10 p-3 lg:p-4">
    <div class="flex items-center flex-no-shrink text-white mr-6"><img src="./assets/logo.png" alt="Client logo" class="h-8 w-8 mr-2">
      <routerlinkwrapper-stub to="/" label="Client" classes="font-semibold text-xl tracking-tight text-grey-darker"></routerlinkwrapper-stub>
    </div>
    <div class="flex block lg:hidden">
      <div id="menu-open"><button aria-label="Toggle navigation" class="flex items-center px-3 py-2 border rounded text-green border-green hover:text-green-lighter hover:border-green-light"><svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="fill-current h-3 w-3">
            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
          </svg></button></div>
    </div>
    <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto min-h-screen lg:min-h-full pt-6 lg:pt-0 hidden">
      <div class="text-sm lg:flex-grow text-left lg:text-center px-2">
        <routerlinkwrapper-stub to="/" label="home" classes="link"></routerlinkwrapper-stub>
        <separator-stub style="display: none;"></separator-stub> <span class="hidden lg:inline">
            |
          </span>
        <routerlinkwrapper-stub to="/test" label="Test" classes="link"></routerlinkwrapper-stub> <span class="hidden lg:inline">
            |
          </span>
        <routerlinkwrapper-stub to="/foos" label="Foo" classes="link"></routerlinkwrapper-stub>
        <separator-stub style="display: none;"></separator-stub>
      </div>
      <div class="text-sm text-left lg:text-center px-2 lg:px-0">
        <routerlinkwrapper-stub to="/parameters" label="parameters" classes="link"></routerlinkwrapper-stub>
        <googlesigninbutton-stub class="ml-2 lg:ml-0 mt-4 lg:mt-0"></googlesigninbutton-stub>
      </div>
    </div>
  </nav>
  <div class="min-h-screen pt-24 px-6 pb-6">
    <routerview-stub name="default"></routerview-stub>
  </div>
  <transitionslideup-stub duration="400">
    <notification-stub notification="[object Object]" style="display: none;"></notification-stub>
  </transitionslideup-stub>
</div>
`;
